--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,10 @@ body {
 .table-cell.code {
   display: block;
 }
+.table-cell.code:hover {
+  color: #CACACA;
+  cursor: pointer;
+}
 
 .table-cell.amount {
   display: block;
